# Adveyes-ACM-Research

./: README.md
eye_tracking/: MonitorTracking.py  app.py  pyproject.toml  requirements.txt  screen_position.txt  setup.bat
eye_tracking/gaze_sessions/: gaze_output_20251027-214705.ndjson  gaze_output_20251027-214751.ndjson  gaze_output_20251029-173838.ndjson  gaze_output_20251030-134034.ndjson  gaze_output_20251030-150224.ndjson  gaze_output_20251030-152411.ndjson  gaze_output_20251030-155021.ndjson  gaze_output_20251030-162211.ndjson  gaze_output_20251030-163908.ndjson  gaze_output_20251030-170257.ndjson  gaze_output_20251030-171826.ndjson
eyetracksoftwrae/: MonitorTracking.py  main.py  pyproject.toml
src/app/: page.js
src/app/01cardcpt/: page.js
src/app/02stroop/: page.js
src/app/03freespeech/: page.js
src/app/04numbersense/: page.js
src/app/adam/: CPT_Summary.csv  cptMetric.ipynb  data.ipynb
src/app/adam/adhd/: adhd_test.csv  adveyes_cpt_trials_2025-10-30_15-16-17.csv  adveyes_cpt_trials_2025-10-30_15-16-17.json  adveyes_cpt_trials_2025-10-30_16-03-19.csv  adveyes_cpt_trials_2025-10-30_16-03-19.json  adveyes_cpt_trials_2025-10-30_16-48-18.csv  adveyes_cpt_trials_2025-10-30_16-48-18.json  adveyes_cpt_trials_2025-10-30_17-11-45.csv  adveyes_cpt_trials_2025-10-30_17-11-45.json
src/app/adam/nonadhd/: adveyes_cpt_trials_2025-10-30_13-52-14.csv  adveyes_cpt_trials_2025-10-30_13-52-14.json  adveyes_cpt_trials_2025-10-30_15-33-34.csv  (+6 more)
src/app/assessment/: page.js
src/app/combinedtest/: page.js
src/app/lib/: export.js
src/app/stroop-test/: page.js
(+2 files in other folders)
