[project]
name = "eyetracksoftwrae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "keyboard>=0.13.5",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "scipy>=1.16.2",
]
